Added complete nasi goreng and 2 more
Finished Nasi Goreng Recipe. Added Rawon and Soto to be competed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/nasi-goreng.html"> Nasi Goreng Recipe</a>
+        
     </body>
 
 
