--- a/recipes/nasi-goreng.html
+++ b/recipes/nasi-goreng.html
@@ -2,10 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nasi Goreng Recipe</title>
 </head>
 <body>
     <h1>Nasi Goreng Recipe</h1>
+    <img src="nasi-goreng.jpg" alt="Delicious Nasi Goreng Picture" height="350" width="500">
+    <h3>The ultimate Indonesian style nasi goreng</h3>
+        <p>This is an authentic yet extra delicious recipe that will entice your pallettes with the right amount of spices. It is a fried rice recipe that you will never regret making.</p>
+
+    <h4>Ingridients</h4>
+    <ul>
+        <li>A plate or bowl of day old rice or chill a freshly cooked rice for 1 hour in the fridge</li>
+        <li>4 cloves of garlic</li>
+        <li>2 cloves of shallots</li>
+        <li>2 cayenne peppers</li>
+        <li>2 tbs of sweet soy sauce (kecap manis)</li>
+        <li>1 tbs of oyster sauce</li>
+    
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Dice all solid ingridients</li>
+        <li>Sautee all solid ingridients to golden brown</li>
+        <li>Add all the rice onto the pan</li>
+        <li>Fry and stir the rice around</li>
+        <li>Pour all the liguid ingridients</li>
+        <li>Toss and mix the rice around until it achieves an even color</li>
+        <li>Serve onto the plate, you may add a fried egg and extra vegetables such as cucumbers and tomato.</li>
+
+
+    </ol>
+
 </body>
 </html>
