Finished 3 recipes will ul all 3 links

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/nasi-goreng.html"> Nasi Goreng Recipe</a>
+        <h1>Odin Recipes by Han</h1>
+        <h3> A list of Indonesian recipes:</h3>
+        <ul>
+            <li><a href="recipes/nasi-goreng.html"> Nasi Goreng Recipe</a></li>
+            <li><a href="recipes/rawon.html"> Beef Rawon Recipe</a></li>
+            <li><a href="recipes/soto-ayam.html">Soto Ayam Recipe</a></li>
+
+        </ul>
+        
         
     </body>
 
