--- a/recipes/rawon.html
+++ b/recipes/rawon.html
@@ -9,7 +9,8 @@
 <body>
     <h1> Beef Rawon Recipe</h1>
     <img src="rawon.jpg" height="350" width="500" alt="Delicious Rawin Picture">
-    <h3>Delicious beef stew full of herbalicious flavor and spices. You will never need another beef stew  ever again.</h3>
+    <h3>Delicious beef stew full of herbalicious flavor and spices. </h3>
+    <p>Beef stew originated from the east of Java island. You will never need another beef stew  ever again.</p>
     <h4>Ingridients</h4>
     <ul>
         <li>1 kg beef (usually I use short ribs or shank or brisket).</li>
