--- a/recipes/soto-ayam.html
+++ b/recipes/soto-ayam.html
@@ -9,7 +9,8 @@
 <body>
     <h1> Soto Ayam Recipe</h1>
     <img src="soto-ayam.jpg" height="340" width="500" alt="Delicious Rawin Picture">
-    <h3>Delicious chicken soup with fresh yet yet rich flavor that you cannot find anywhere else.</h3>
+    <h3>Delicious chicken soup with fresh yet yet rich flavor.</h3>
+    <p>This dish can be eaten at anytime of day! If you love tangy and fresh chickeny flavor, this is for you!</p>
     <h4>Ingridients</h4>
     <ul>
         <li>1 free-range chicken, about 3 pounds, quartered</li>
