--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     <meta charset="UTF -8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             The Odin Project Recipes Website
         </title>
