Added style for h1 and images
To do: figure out how to properly align ul
and how to properly give background color to ul

--- a/recipes/nasi-goreng.html
+++ b/recipes/nasi-goreng.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <title>Nasi Goreng Recipe</title>
 </head>
 <body>
-    <h1>Nasi Goreng Recipe</h1>
-    <img src="nasi-goreng.jpg" alt="Delicious Nasi Goreng Picture" height="350" width="500">
+    <h1 class="ptitle">Nasi Goreng Recipe</h1>
+    <img class="foodpic" src="nasi-goreng.jpg" alt="Delicious Nasi Goreng Picture" height="350" width="500">
     <h3>The ultimate Indonesian style nasi goreng</h3>
         <p>This is an authentic yet extra delicious recipe that will entice your pallettes with the right amount of spices. It is a fried rice recipe that you will never regret making.</p>
 
