--- a/recipes/rawon.html
+++ b/recipes/rawon.html
@@ -2,12 +2,13 @@
 
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <title>Beef Rawon Recipe</title>
 </head>
 
 <body>
-    <h1> Beef Rawon Recipe</h1>
+    <h1 class="ptitle"> Beef Rawon Recipe</h1>
     <img src="rawon.jpg" height="350" width="500" alt="Delicious Rawin Picture">
     <h3>Delicious beef stew full of herbalicious flavor and spices. </h3>
     <p>Beef stew originated from the east of Java island. You will never need another beef stew  ever again.</p>
