--- a/recipes/soto-ayam.html
+++ b/recipes/soto-ayam.html
@@ -2,12 +2,13 @@
 
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <title>Soto Ayam Recipe</title>
 </head>
 
 <body>
-    <h1> Soto Ayam Recipe</h1>
+    <h1 class="ptitle"> Soto Ayam Recipe</h1>
     <img src="soto-ayam.jpg" height="340" width="500" alt="Delicious Rawin Picture">
     <h3>Delicious chicken soup with fresh yet yet rich flavor.</h3>
     <p>This dish can be eaten at anytime of day! If you love tangy and fresh chickeny flavor, this is for you!</p>
