--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <body>
         <h1 class="ptitle">Odin Recipes by Han</h1>
         <h3 class="subhead"> A list of Indonesian recipes:</h3>
-        <div class="selection">
-            <ul>
-                <li><a href="recipes/nasi-goreng.html"> Nasi Goreng Recipe</a></li>
+        <div>
+            <ul class="selection">
+                <li><span><a href="recipes/nasi-goreng.html"> Nasi Goreng Recipe</a></span></li>
                 <li><a href="recipes/rawon.html"> Beef Rawon Recipe</a></li>
                 <li><a href="recipes/soto-ayam.html">Soto Ayam Recipe</a></li>
             </ul>
