Practiced my css with class selectors, id, etc

--- a/recipes/nasi-goreng.html
+++ b/recipes/nasi-goreng.html
@@ -8,12 +8,14 @@
 <body>
     <h1 class="ptitle">Nasi Goreng Recipe</h1>
     <img class="foodpic" src="nasi-goreng.jpg" alt="Delicious Nasi Goreng Picture" height="350" width="500">
+    <div class="intro">
     <h3>The ultimate Indonesian style nasi goreng</h3>
         <p>This is an authentic yet extra delicious recipe that will entice your pallettes with the right amount of spices. It is a fried rice recipe that you will never regret making.</p>
-
+    </div>
+    <div class="inside">
     <h4>Ingridients</h4>
     <ul>
-        <li>A plate or bowl of day old rice or chill a freshly cooked rice for 1 hour in the fridge</li>
+        <li id="dayold">A plate or bowl of day old rice or chill a freshly cooked rice for 1 hour in the fridge</li>
         <li>4 cloves of garlic</li>
         <li>2 cloves of shallots</li>
         <li>2 cayenne peppers</li>
@@ -33,6 +35,7 @@
 
 
     </ol>
-
+    </div>
 </body>
+<a href="../index.html"><button>Back to Main</button></a>
 </html>
