--- a/recipes/rawon.html
+++ b/recipes/rawon.html
@@ -10,8 +10,11 @@
 <body>
     <h1 class="ptitle"> Beef Rawon Recipe</h1>
     <img src="rawon.jpg" height="350" width="500" alt="Delicious Rawin Picture">
-    <h3>Delicious beef stew full of herbalicious flavor and spices. </h3>
-    <p>Beef stew originated from the east of Java island. You will never need another beef stew  ever again.</p>
+    <div class="intro">
+        <h3>Delicious beef stew full of herbalicious flavor and spices. </h3>
+        <p>Beef stew originated from the east of Java island. You will never need another beef stew  ever again.</p>
+    </div>
+    <div class="inside">
     <h4>Ingridients</h4>
     <ul>
         <li>1 kg beef (usually I use short ribs or shank or brisket).</li>
@@ -63,6 +66,8 @@
     
     
     </ol>
+</div>
+    <a href="../index.html"><button>Back to Main</button></a>
 </body>
 
 
