--- a/recipes/soto-ayam.html
+++ b/recipes/soto-ayam.html
@@ -10,9 +10,13 @@
 <body>
     <h1 class="ptitle"> Soto Ayam Recipe</h1>
     <img src="soto-ayam.jpg" height="340" width="500" alt="Delicious Rawin Picture">
-    <h3>Delicious chicken soup with fresh yet yet rich flavor.</h3>
-    <p>This dish can be eaten at anytime of day! If you love tangy and fresh chickeny flavor, this is for you!</p>
-    <h4>Ingridients</h4>
+    <div class="intro">
+        <h3>Delicious chicken soup with fresh yet yet rich flavor.</h3>
+        <p>This dish can be eaten at anytime of day! If you love tangy and fresh chickeny flavor, this is for you!</p>
+    </div>
+    <div class="inside">
+
+        <h4>Ingridients</h4>
     <ul>
         <li>1 free-range chicken, about 3 pounds, quartered</li>
         <li>2 stalks fresh lemongrass, bruised with the handle of a heavy knife and tied in a knot</li>
@@ -49,4 +53,6 @@
     
     
     </ol>
+    </div>
+    <a href="../index.html"><button>Back to Main</button></a>
 </body>
